# SZ3

./: CMakeLists.txt  build_script.sh
include/: SZ.hpp
include/SZ3/compressor/: SZInterpolationCompressor.hpp
include/SZ3/utils/: Config.hpp
include/compressor/: SZIECompressor.hpp  SZ_APS_Compressor.hpp  SZ_General_Compressor.hpp  SZ_Pastri_Compressor.hpp  SZ_Predictor_Bypass_Compressor.hpp
include/encoder/: FastEncoder.hpp  HuffmanEncoder.hpp
include/predictor/: ComposedPredictor.hpp  EstLorenzoPredictor.hpp  PatternPredictor.hpp  RegressionPredictor.hpp
include/preprocessor/: APSPreprocessor.hpp  Preprocessor.hpp
include/quantizer/: EstQuantizer.hpp  IntegerQuantizer.hpp  PastriQuantizer.hpp
include/utils/: Config.hpp
test/: CMakeLists.txt  sz_aps_demo.cpp  sz_backend.cpp  sz_demo.cpp  sz_ie_demo.cpp  sz_pastri_demo.cpp  sz_predictor_bypass_test.cpp
tools/sz3/: sz3.config  sz3.cpp
